[package]
name = "asciify"
version = "0.1.6"
authors = ["Himanshu Kattelu <himanshukattelu@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Hkattelu/Asciify"
license-file = "LICENSE"
keywords = ["ascii", "images"]
description = "A rust library for converting images to a readable format on the command line"
exclude = [
    "images/*",
    "test-images/*",
    "src/main.rs",
]

[lib]
name = "asciify"
path = "src/lib.rs"

[dependencies]
image = "0.23.8"
structopt = "0.3.16"
termcolor = "1"